# nv-reloaded

./: .gitignore  .gitmodules  Makefile  README.md  functions.go  go.mod  go.sum  install_go  install_nv  nv  nv.go  nv.go.old  nv.service  sync  sync-exclude
.github/workflows/: code_quality.yml
IT8951 original WaveShare C lib/: CMakeCache.txt  CMakeLists.txt  Makefile
IT8951 original WaveShare C lib/Config/: DEV_Config.c  Makefile  RPI_gpiod.c
IT8951 original WaveShare C lib/e-Paper/: EPD_IT8951.h  Makefile
assets/: .welcome.txt
content/: constants.go  debug.go  document.go  empty.go  functions.go  panel.go  stats.go  welcome.go  wifi.go
content/assets/: germinal-french.utf-8.txt  germinal.utf-8.txt  les-miserables-I.txt  les-miserables-ascii-I.txt  les-miserables.utf-8.txt  moby-dick.txt  sample.txt  sample2.txt  sample3.txt  welcome.txt  x.txt
display/: alertbox.go  content.go  debug.go  default-font.go  display.go  fonts.go  images.go  primitives.go  spinner.go  statusBar.go  updater.go  waitbox.go  window.go
display/fontconvert/: Makefile  convert.sh  fontconvert  fontconvert2go  fontconvert2go.c  makefonts.sh  makegofonts.sh
display/fonts-go/: Arial Unicode12pt8b.go  Arial Unicode16pt8b.go  Arial Unicode20pt8b.go  Arial Unicode24pt8b.go  Arial Unicode30pt8b.go  Arial Unicode9pt8b.go  CourierStd-Bold12pt8b.go  CourierStd-Bold16pt8b.go  CourierStd-Bold20pt8b.go  CourierStd-Bold24pt8b.go  CourierStd-Bold30pt8b.go  CourierStd12pt8b.go  (+79 more)
input/: debug.go  keyboard.go  keymap.go
kernel_module/: Makefile  hello.c
setup/: package-lock.json  package.json
(+39 files in other folders)
